# rag-hand-ons

./: .gitignore  README.md  exercise-0-Overview.ipynb  exercise-1-naive-llm.ipynb  exercise-2-RAG overview.ipynb  exercise-3-Vector-store-and-embedding.ipynb  exercise-4-Retrieval.ipynb  exercise-5-Cook-the-answer.ipynb  exercise-6-Wrap-it-up.ipynb  expand-chat-agent.ipynb  pyproject.toml
